--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "bcryptjs": "^3.0.3",
+    "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.0.2",
     "next": "16.1.1",
+    "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sass": "^1.97.1",
